[gd_scene load_steps=10 format=3 uid="uid://dolejrjv5sh2d"]

[ext_resource type="Script" uid="uid://c8n1of7mto21s" path="res://scripts/player/player.gd" id="1_n4mhy"]
[ext_resource type="Script" uid="uid://cp0m4yoj5uj5g" path="res://scripts/systems/resources/weapon.gd" id="2_o3a6b"]
[ext_resource type="Script" uid="uid://gbvrn8dw4uib" path="res://scripts/player/circle.gd" id="2_q8roa"]
[ext_resource type="Script" uid="uid://bu565kalhpyh2" path="res://scripts/systems/entity/health.gd" id="3_8fvqg"]
[ext_resource type="Script" uid="uid://r4mivdeuyesd" path="res://scripts/systems/entity/hitbox.gd" id="3_21x68"]
[ext_resource type="Script" uid="uid://cj6kq3ictlcit" path="res://scripts/systems/entity/hurtbox.gd" id="4_4m4tg"]

[sub_resource type="Resource" id="Resource_g2v8j"]
script = ExtResource("2_o3a6b")

[sub_resource type="CircleShape2D" id="CircleShape2D_c2wpq"]
radius = 55.0

[sub_resource type="CircleShape2D" id="CircleShape2D_s4w6f"]
radius = 55.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 16
slide_on_ceiling = false
script = ExtResource("1_n4mhy")
weapon = SubResource("Resource_g2v8j")

[node name="circle" type="Node2D" parent="."]
script = ExtResource("2_q8roa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c2wpq")

[node name="Hitbox" type="Area2D" parent="."]
script = ExtResource("3_21x68")
can_apply_status_effects = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_c2wpq")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("enemy", "health")]
collision_mask = 2
script = ExtResource("4_4m4tg")
enemy = NodePath("..")
health = NodePath("../Health")
pierce = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_s4w6f")

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("healthbar")]
script = ExtResource("3_8fvqg")
healthbar = NodePath("../ProgressBar")

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 90.0
offset_right = 75.0
offset_bottom = 120.0
grow_horizontal = 2
step = 1.0
value = 100.0

[node name="DeathReset" type="Timer" parent="."]
wait_time = 0.5

[connection signal="health_changed" from="Health" to="." method="_on_health_health_changed"]
[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
[connection signal="timeout" from="DeathReset" to="." method="_on_death_reset_timeout"]
